fix: adjust z-index for megamenu and submenu for better stacking context (#8)

--- a/wordpress/wp-content/themes/sense7/assets/scss/block/core/_navigation.scss
+++ b/wordpress/wp-content/themes/sense7/assets/scss/block/core/_navigation.scss
@@ -24,6 +24,7 @@
 				border-radius: 0 0 1rem 1rem;
 				border: 0;
 				padding: var(--wp--preset--spacing--30);
+				z-index: 100;
 			}
 		}
 	}
