--- a/wordpress/wp-content/themes/sense7/assets/scss/block/multistore/_megamenu.scss
+++ b/wordpress/wp-content/themes/sense7/assets/scss/block/multistore/_megamenu.scss
@@ -13,6 +13,7 @@ nav.menu-main {
 .multistore-block-megamenu {
 	box-shadow: 0 .5rem .5rem rgba(0, 0, 0, 0.1);
 	box-sizing: border-box;
+	z-index: 99;
 	.wp-block-navigation-link {
 		font-weight: bold;
 	}
